Fix a bunch of issues
- Dismiss the search results popover when a result is clicked
- Dismiss the search results when clicking outside them
- Show the search results if the search field is given focus while it has text in it
- Make sure the search results don’t overlap with the survey ad
- Remove the brand’s unnecessary white background that was visible in Safari
- Fix the background of the search results in Safari
- Tone down the drop shadow on the search results

--- a/static/header.less
+++ b/static/header.less
@@ -16,7 +16,6 @@
     display: flex;
     height: @brand-height;
     padding-top: @gutter;
-    background: white;
     .dropdown {
         display:none;
     }
