--- a/static/search.less
+++ b/static/search.less
@@ -68,9 +68,9 @@
 	background: #fff;
 	right: 10px;
 	overflow-y: auto;
-	box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.75);
+	box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.25);
 	max-width: 350px;
-	max-height: 90%;
+	max-height: calc(~"100vh - 122px");// 53px header + 49px survey ad + 20px drop shadow
 	z-index: 999999;
 	transition: all @transition-speed ease;
 	transition-property: -webkit-backdrop-filter, backdrop-filter, background;
@@ -150,10 +150,9 @@
 }
 
 @supports (-webkit-backdrop-filter: blur(1px)) or (backdrop-filter: blur(1px)) {
-	#left > .bottom .search-results-container {
+	.search-results-container {
 		-webkit-backdrop-filter: @backdrop-blur;
-		-webkit-font-smoothing: subpixel-antialiased;
 		backdrop-filter: @backdrop-blur;
-		background: rgba(100%, 100%, 100%, .65);
+		background: rgba(100%, 100%, 100%, .9);// this should be .8, but Safari 12.1 has a bug where it doesn’t apply the filter the first time the results are shown
 	}
 }
